# pionex-rest-api

./: CMakeLists.txt  colors.h  https_interface.h  main.c  test.c  tet.h
include/: callbackStructs.h  createSignature.h
includes/: https_interface.h  orders.h  restInit.h  rest_interface.h  signature.h
sources/: getBalance.c  newLimitOrder.c  restInit.c  signature.c
src/: createSignature.c  getBalanceCallback.c  newLimitOrderCallback.c
tests/test1/: CMakeLists.txt  build.ninja  main.c
tests/test2/: build.ninja  main.c
